# insightface_ncnn

arcface/: CMakeLists.txt  Makefile  main.cpp  mtcnn.h
include/dlib/: algs.h  assert.h  image_processing.h  lsh.h  model_utils.hpp  sparse_vector.h  test_for_odr_violations.h
include/dlib/image_processing/: shape_predictor.h  shape_predictor_trainer.h
